# RustTemplate

./: .env.example  .gitignore  Cargo.toml  README.md  keys_generate.sh
.claude/: settings.json
migrations/: 001_create_users.sql  002_add_reset_token.sql  002_create_rbac.sql  003_seed_rbac_example.sql
src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
src/dto/: auth_dto.rs  mod.rs  user_dto.rs
src/handlers/: mod.rs
src/middleware/: auth.rs  claims.rs  mod.rs  role.rs
src/models/: mod.rs  rbac.rs  user.rs
src/routes/: health.rs  mod.rs  users.rs
src/routes/auth/: auth_routes.rs  jwks.rs  mod.rs  recovery_routes.rs
src/services/: mod.rs  user_service.rs
src/services/auth/: auth_service.rs  mod.rs  recovery_service.rs
src/store/: mod.rs  rbac_store.rs  seeder.rs  user_store.rs
src/utils/: mail.rs  mod.rs  password.rs
